--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 	<section class="page-section page-section-spacious bg-more-shadier" id="who-we-worked-with">
 		<div class="container-narrow">
-			<h1 class="text-center">Who We Worked With</h1>
+			<h1 class="text-center">Who We Work With</h1>
 		
 			<div class="row">
 				<div class="col-xs-12 col-sm-3">
