--- a/news.html
+++ b/news.html
@@ -37,6 +37,26 @@
 		<div class="container-narrow">	
 			<ul class="blog-index">
 				<li class="mb-4 mb-md-6 mb-lg-8">
+					<h2> SBIR Army Phase II Project Project A15-055 Awarded
+						<div class="who-when mt-1">
+							<time class="blog-index-time"> September 16, 2016</time>
+						</div>
+					</h2>
+					<p class="lead mt-4">
+						CFDRC's Computational Medicine and Biology (CMB) division has been awarded an Army SBIR Phase II project to develop a burn injury assessment tool with morphable 3D anthropometric human body models in order to improve the accuracy of percentage burn surface area estimates. This is a continuation of the work performed in Phase I where a functional prototype tool was created for real-time generation of an anthropometric 3D virtual human body with graphical annotations of burn areas and severity as well as assessment of percentage of total body surface area (%TBSA). For Phase II, the capabilities of the prototype will be expanded to develop a comprehensive tool. New functionalities will include a database to retrieve stored patient and burn information, addition of child model, full body model articulations for independent body parts scaling, and a specialized interfa ce for the hands given their high burn incidences. To further aid in image-assisted burn demarcation, a photograph acquisition guide for direct alignment with the 3D model on the mobile version of our tool will be developed along with infrared thermal image processing to estimate burn depth.
+					</p>
+				</li>
+			</ul>	
+		</div>
+	</section>
+
+	<hr>
+
+
+	<section class="page-section page-section-spacious mb-4 mt-4">
+		<div class="container-narrow">	
+			<ul class="blog-index">
+				<li class="mb-4 mb-md-6 mb-lg-8">
 					<h2> SBIR CBD Phase I Project CBD161-005 Awarded
 						<div class="who-when mt-1">
 							<time class="blog-index-time"> April 11, 2016</time>
