--- a/news.html
+++ b/news.html
@@ -37,7 +37,7 @@
 		<div class="container-narrow">	
 			<ul class="blog-index">
 				<li class="mb-4 mb-md-6 mb-lg-8">
-					<h2> SBIR Army Phase II Project Project A15-055 Awarded
+					<h2> SBIR Army Phase II Project A15-055 Awarded
 						<div class="who-when mt-1">
 							<time class="blog-index-time"> September 16, 2016</time>
 						</div>
