--- a/praesus.html
+++ b/praesus.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Lato|Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
  	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>ocellus</title>
+	<title>praesus</title>
 </head>
 <body>
 	<header class="site-header">
@@ -33,6 +33,35 @@
 			</div>
 		</div>
 	</div>
+
+	<section class="page-section page-section-spacious">
+		<div class="container-narrow">
+			<div class="row mt-6">
+				<div class="col-xs-12 col-sm-3">
+					<h1 class="text-center">Motivation</h1>
+				</div>
+				<div class="col-xs-12 col-sm-9">
+					<p class="lead">
+						Typical procedures for respirator masks sizing and protective fit test are time-consuming and user intensive, requiring taking anthropometric measurements of the wearer, sampling the wearer’s breathing zone and the use of specialized tools and equipment. 
+					</p>
+				</div>
+			</div>
+			<div class="row mt-6">
+				<div class="col-xs-12 col-sm-3">
+					<h1 class="text-center">Solution</h1>
+				</div>
+				<div class="col-xs-12 col-sm-9">
+					<p class="lead">
+						This software app aims to quickly, accurately and automatically perform respirator mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed. From the 2D images captured, personalized 3D face and head surfaces are generated through shape reconstruction in real-time. Common facial anthropometric measurements are automatically extracted from the mesh and are then used to predict respirator mask size according to National Institute for Occupational Safety and Health (NIOSH), Los Alamos National Laboratory (LANL) and custom respirator test fit panels.
+					</p>
+					<br>	
+
+					<img class="home-illu" src="images/medium_mask_labled.png" alt="Rivus-CFUs">
+					<p class="labelthin"> Respirator size prediction based on bizgomatic breadth and menton sellion length of facial mesh </p>	
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<section class="page-section page-section-spacious">
 		<div class="container-narrow">		
