--- a/praesus.html
+++ b/praesus.html
@@ -52,7 +52,7 @@
 				</div>
 				<div class="col-xs-12 col-sm-9">
 					<p class="lead">
-						This software app aims to quickly, accurately and automatically perform respirator mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed. From the 2D images captured, personalized 3D face and head surfaces are generated through shape reconstruction in real-time. Common facial anthropometric measurements are automatically extracted from the mesh and are then used to predict respirator mask size according to National Institute for Occupational Safety and Health (NIOSH), Los Alamos National Laboratory (LANL) and custom respirator test fit panels.
+						This software app aims to quickly, accurately and automatically perform respirator mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed. From the 2D images captured, personalized 3D face and head surfaces are generated through shape reconstruction in real-time. Common facial anthropometric measurements are automatically extracted from the mesh and are then used to predict respirator mask size according to National Institute for Occupational Safety and Health (NIOSH) and custom respirator test fit panels.
 					</p>
 					<br>	
 
