--- a/rivus.html
+++ b/rivus.html
@@ -59,7 +59,11 @@
 						With the software tool, the user can enter the patient’s biographical information (name, age, gender, burn type, etc.). Switching gender automatically loads the appropriate model. The user enters any anthropometry measurements available to create the personalized 3D model in real-time, which is displayed and can be manipulated (rotate, translate and zoom). 	
 					</p>
 					<br>
-					<img class="home-illu" src="images/burn_generator.png" alt="Rivus-Generator">
+					<!--img class="home-illu" src="images/burn_generator.png" alt="Rivus-Generator"-->
+					<video class="videoInsert" autoplay controls loop>
+					  <source src="images/realtimemorphing_x264_normal.mp4" type="video/mp4">
+					  Your browser does not support the video tag.
+					</video>
 					<p class="labelthin"> Real-time 3D Human Body Generation </p>
 				
 					<br>	
