--- a/rivus.html
+++ b/rivus.html
@@ -64,6 +64,7 @@
 					  <source src="images/realtimemorphing_x264_normal.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video>
+					<script> document.getElementById('videoInsert').play(); </script>
 					<p class="labelthin"> Real-time 3D Human Body Generation </p>
 				
 					<br>	
