--- a/rivus.html
+++ b/rivus.html
@@ -66,6 +66,9 @@
 					</video>
 					<!--script> document.getElementById('videoInsert').play(); </script-->
 					<p class="labelthin"> Real-time 3D Human Body Generation </p>
+					<br>
+					<img class="home-illu" src="images/female-android.png" alt="Rivus-Android">
+					<p class="labelthin"> 3D Human Body Generation on Android </p>
 				
 					<br>	
 					<p class="lead">
