--- a/ocellus.html
+++ b/ocellus.html
@@ -90,7 +90,7 @@
 					<img class="home-illu" src="images/human_dextran2.gif" alt="inject-dextran">	
 				</div>
 				<div class="col-xs-12 col-sm-4">
-					<h3 class="text-center">Fluorecein</h3>
+					<h3 class="text-center">Fluorescein</h3>
 					<img class="home-illu" src="images/human_fluorecein2.gif" alt="inject-fl">
 				</div>
 			</div>
