--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="bootstrap/js/jquery-3.1.1.min.js"></script>	
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
+    <link rel="icon" type="image/png" href="images/logo_favicon-16x16.png">	
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Lato|Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
  	<link rel="stylesheet" type="text/css" href="style.css">
