--- a/news.html
+++ b/news.html
@@ -38,6 +38,25 @@
 		<div class="container-narrow">	
 			<ul class="blog-index">
 				<li class="mb-4 mb-md-6 mb-lg-8">
+					<h2> SBIR Army Phase II Project CBD161-005 Awarded
+						<div class="who-when mt-1">
+							<time class="blog-index-time"> April 26, 2017</time>
+						</div>
+					</h2>
+					<p class="lead mt-4">
+						CFDRC's Computational Medicine and Biology (CMB) division has been awarded a Chemical and Biological Defense (CBD) SBIR Phase II project to quickly, accurately and automatically perform respirator mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed. In Phase I, personalized 3D facial surfaces are generated through shape reconstruction in real-time from captured 2D images. Common facial anthropometric measurements are automatically extracted from the mesh and are then used to predict respirator mask size according to National Institute for Occupational Safety and Health (NIOSH) respirator test fit panels. Preliminary validation showed 5.1% facial anthropometric feature prediction error. Phase II will involve the development of individualized respiration models to simulate the movement of air and particulates through the mask and into the lungs in order to predict quantitative fit factor. Further validation studies will also be performed to ensure the accuracy of the app predictions. 
+					</p>
+				</li>
+			</ul>	
+		</div>
+	</section>
+
+	<hr>
+
+	<section class="page-section page-section-spacious mb-4 mt-4">
+		<div class="container-narrow">	
+			<ul class="blog-index">
+				<li class="mb-4 mb-md-6 mb-lg-8">
 					<h2> SBIR Army Phase II Project A15-055 Awarded
 						<div class="who-when mt-1">
 							<time class="blog-index-time"> September 16, 2016</time>
@@ -52,7 +71,6 @@
 	</section>
 
 	<hr>
-
 
 	<section class="page-section page-section-spacious mb-4 mt-4">
 		<div class="container-narrow">	
