--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
     <link rel="icon" type="image/png" href="images/logo_favicon-16x16.png">
+
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Lato|Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
  	<link rel="stylesheet" type="text/css" href="style.css">
@@ -38,34 +39,23 @@
 	<section class="page-section page-section-spacious contact-shade bottom-pad">
 		<div class="container-narrow">		
 			<div class="row mt-4">
-				<div class="col-xs-12 col-sm-6 no-pad">
-					<img class="home-illu" src="images/googlemap.png" alt="googlemap">
+				<div class="col-xs-12 col-sm-3 no-pad">
+					<img class="home-illu" src="images/huntsville_pin.png" alt="googlemap">
 				</div>
-				<div class="col-xs-12 col-sm-6 no-pad">
-					<a href="http://www.cfdrc.com" target="_blank">
-						<img class="home-illu imgcenter top-pad" src="images/cfdrc_small.png" alt="cfdrc">
+				<div class="col-xs-12 col-sm-9">				
+					<p class="labelthin-bold text-left no-bottom-pad mb-0">
+						Email
+					</p>
+					<p class="labelthin text-left">
+						kaysunphd [at] gmail [dot] com
+					</p>
+				</div>
+				<div class="col-xs-12 col-sm-9">
+					<a href="https://www.linkedin.com/in/kay-sun-22164411" target="_blank">
+						<img class="home-illu imgcenter" src="images/LinkedIn-48.png" align="left" alt="kaysun-linkedin">
 					</a>
-					<br>
-					<p class="labelthin text-center">
-						701 McMillian Way NW<br>
-						Huntsville, AL 35806
-					<p>
-					<p class="labelthin text-center">
-						256-726-4800 / cmbinfo@cfdrc.com
-					<p>
-
-					<div class="col-xs-12 col-sm-6 no-pad">
-						<a href="https://www.linkedin.com/company/cfd-research-corporation" target="_blank">
-							<img class="home-illu imgcenter" src="images/LinkedIn-48.png" align="right" alt="cfdrc-linkedin">
-						</a>
-					</div>
-					<div class="col-xs-12 col-sm-6 no-pad">	
-						<a href="https://www.youtube.com/user/CFDResearchCorp" target="_blank">
-							<img class="home-illu imgcenter" src="images/YouTube-48.png" align="left" alt="cfdrc-youtube">
-						</a>
-					</div>
-
-				</div>
+				</div>	
+				
 			</div>
 		</div>
 
