--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
 			<h1 class="text-center">What We Do</h1>
 			<div class="row text-center mt-6">
 				<div class="col-xs-12 col-sm-6">
+					<img class="img-doing" src="images/discover.png" alt="discover">
 					<p class="labelbold">DISCOVER</p>
 					<p class="label mt-3">
 						We discuss with you to discover your needs, priorities, and constraints. We will work you to formulate a strategy and come up with a suitable approach. 
 					</p>					
 				</div>
 				<div class="col-xs-12 col-sm-6">
+					<img class="img-doing" src="images/terminal.png" alt="solve">
 					<p class="labelbold">SOLVE</p>
 					<p class="label mt-3">
 						We bring our extensive experience in medical modeling for disease & injury simulation, image-guided surgery, therapy evaluation, and medical device & protective equipment design to conceptualize the solution. 
@@ -87,12 +89,14 @@
 
 			<div class="row text-center mt-5 mb-4">
 				<div class="col-xs-12 col-sm-6">
+					<img class="img-doing" src="images/UXUI_small.png" alt="create">
 					<p class="labelbold">CREATE</p>
 					<p class="label mt-3">
 						We implement our experience-driven solution and design to create a reliable, simple, and instinctive product.
 					</p>					
 				</div>
 				<div class="col-xs-12 col-sm-6">
+					<img class="img-doing" src="images/deliver_small.png" alt="deliver">
 					<p class="labelbold">DELIVER</p>
 					<p class="label mt-3">
 						We deliver your fully functional product to your specifications with documentation and support, and on schedule and budget.
