--- a/news.html
+++ b/news.html
@@ -38,13 +38,13 @@
 		<div class="container-narrow">	
 			<ul class="blog-index">
 				<li class="mb-4 mb-md-6 mb-lg-8">
-					<h2> SBIR Army Phase II Project CBD161-005 Awarded
+					<h2> SBIR CBD Phase II Project CBD161-005 Awarded
 						<div class="who-when mt-1">
 							<time class="blog-index-time"> April 26, 2017</time>
 						</div>
 					</h2>
 					<p class="lead mt-4">
-						CFDRC's Computational Medicine and Biology (CMB) division has been awarded a Chemical and Biological Defense (CBD) SBIR Phase II project to quickly, accurately and automatically perform respirator mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed. In Phase I, personalized 3D facial surfaces are generated through shape reconstruction in real-time from captured 2D images. Common facial anthropometric measurements are automatically extracted from the mesh and are then used to predict respirator mask size according to National Institute for Occupational Safety and Health (NIOSH) respirator test fit panels. Preliminary validation showed 5.1% facial anthropometric feature prediction error. Phase II will involve the development of individualized respiration models to simulate the movement of air and particulates through the mask and into the lungs in order to predict quantitative fit factor. Further validation studies will also be performed to ensure the accuracy of the app predictions. 
+						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded a Chemical and Biological Defense (CBD) SBIR Phase II project to quickly, accurately and automatically perform respirator mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed. In Phase I, personalized 3D facial surfaces are generated through shape reconstruction in real-time from captured 2D images. Common facial anthropometric measurements are automatically extracted from the mesh and are then used to predict respirator mask size according to National Institute for Occupational Safety and Health (NIOSH) respirator test fit panels. Preliminary validation showed 5.1% facial anthropometric feature prediction error. Phase II will involve the development of individualized respiration models to simulate the movement of air and particulates through the mask and into the lungs in order to predict quantitative fit factor. Further validation studies will also be performed to ensure the accuracy of the app predictions. 
 					</p>
 				</li>
 			</ul>	
@@ -63,7 +63,7 @@
 						</div>
 					</h2>
 					<p class="lead mt-4">
-						CFDRC's Computational Medicine and Biology (CMB) division has been awarded an Army SBIR Phase II project to develop a burn injury assessment tool with morphable 3D anthropometric human body models in order to improve the accuracy of percentage burn surface area estimates. This is a continuation of the work performed in Phase I where a functional prototype tool was created for real-time generation of an anthropometric 3D virtual human body with graphical annotations of burn areas and severity as well as assessment of percentage of total body surface area (%TBSA). For Phase II, the capabilities of the prototype will be expanded to develop a comprehensive tool. New functionalities will include a database to retrieve stored patient and burn information, addition of child model, full body model articulations for independent body parts scaling, and a specialized interfa ce for the hands given their high burn incidences. To further aid in image-assisted burn demarcation, a photograph acquisition guide for direct alignment with the 3D model on the mobile version of our tool will be developed along with infrared thermal image processing to estimate burn depth.
+						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded an Army SBIR Phase II project to develop a burn injury assessment tool with morphable 3D anthropometric human body models in order to improve the accuracy of percentage burn surface area estimates. This is a continuation of the work performed in Phase I where a functional prototype tool was created for real-time generation of an anthropometric 3D virtual human body with graphical annotations of burn areas and severity as well as assessment of percentage of total body surface area (%TBSA). For Phase II, the capabilities of the prototype will be expanded to develop a comprehensive tool. New functionalities will include a database to retrieve stored patient and burn information, addition of child model, full body model articulations for independent body parts scaling, and a specialized interfa ce for the hands given their high burn incidences. To further aid in image-assisted burn demarcation, a photograph acquisition guide for direct alignment with the 3D model on the mobile version of our tool will be developed along with infrared thermal image processing to estimate burn depth.
 					</p>
 				</li>
 			</ul>	
@@ -82,7 +82,7 @@
 						</div>
 					</h2>
 					<p class="lead mt-4">
-						CFDRC's Computational Medicine and Biology (CMB) division has been awarded a Chemical and Biological Defense (CBD) SBIR Phase I project to quickly, accurately and automatically perform respiratory mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed.
+						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded a Chemical and Biological Defense (CBD) SBIR Phase I project to quickly, accurately and automatically perform respiratory mask sizing and predict protective fit using only 2D images captured on smartphone cameras, thereby replacing the lengthy physical testing procedures and can even be performed in the field when needed.
 					</p>
 				</li>
 			</ul>	
@@ -101,7 +101,7 @@
 						</div>
 					</h2>
 					<p class="lead mt-4">
-						CFDRC's Computational Medicine and Biology (CMB) division has been awarded an Army SBIR Phase I project to develop a burn injury assessment tool with morphable 3D anthropometric human body models in order to improve the accuracy of percentage burn surface area estimates. A functional prototype tool will be created for real-time generation of an anthropometric 3D virtual human body with graphical annotations of burn areas and severity as well as assessment of percentage of total body surface area (%TBSA).
+						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded an Army SBIR Phase I project to develop a burn injury assessment tool with morphable 3D anthropometric human body models in order to improve the accuracy of percentage burn surface area estimates. A functional prototype tool will be created for real-time generation of an anthropometric 3D virtual human body with graphical annotations of burn areas and severity as well as assessment of percentage of total body surface area (%TBSA).
 					</p>
 				</li>
 			</ul>	
@@ -120,7 +120,7 @@
 						</div>
 					</h2>
 					<p class="lead mt-4">
-						CFDRC's Computational Medicine and Biology (CMB) division has been awarded a 3 year Cooperative Agreement project (U01) with the U.S. Food and Drug Administration (FDA) to develop a multiscale-multiphysics modeling and simulation software tool for ocular drug delivery.
+						While at CFDRC's Computational Medicine and Biology (CMB) division, we were awarded a 3 year Cooperative Agreement project (U01) with the U.S. Food and Drug Administration (FDA) to develop a multiscale-multiphysics modeling and simulation software tool for ocular drug delivery.
 					</p>
 				</li>
 			</ul>	
