--- a/ocellus.html
+++ b/ocellus.html
@@ -58,7 +58,7 @@
 
 			<div class="row">
 				<p class="lead">
-					We has developed a unique multiscale-multiphysics model to simulate ocular delivery, absorption, distribution, pharmacokinetics and in vitro to in vivo extrapolation (IVIVE) for generic drugs and drug products.
+					We have developed a unique multiscale-multiphysics model to simulate ocular delivery, absorption, distribution, pharmacokinetics and in vitro to in vivo extrapolation (IVIVE) for generic drugs and drug products.
 				</p>
 				<br>
 			</div>
