--- a/rivus.html
+++ b/rivus.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="col-xs-12 col-sm-9">
 					<p class="lead">
-						To overcome this limitation, CFDRC has successfully developed a functional burn injury assessment tool for real-time generation of 3D human body that morphs with anthropometric measurements. This virtual representation of the body is used for graphical annotations of burn areas and severity as well as assessment of %TBSA and fluid resuscitation recommendations. Given physicians generally overestimate %TBSA with current traditional methods, this tool developed may improve the accuracy of TBSA and burn area estimations, and thereby %TBSA and ultimately treatment recommendations for better patient outcome and lower risk of complications.	
+						To overcome this limitation, we have developed a functional burn injury assessment tool for real-time generation of 3D human body that morphs with anthropometric measurements. This virtual representation of the body is used for graphical annotations of burn areas and severity as well as assessment of %TBSA and fluid resuscitation recommendations. Given physicians generally overestimate %TBSA with current traditional methods, this tool developed may improve the accuracy of TBSA and burn area estimations, and thereby %TBSA and ultimately treatment recommendations for better patient outcome and lower risk of complications.	
 					</p>
 					<br>	
 					<p class="lead">
