--- a/rivus.html
+++ b/rivus.html
@@ -108,7 +108,7 @@
 	<div class="jumbotron-apps rivus-shade text-center">
 		<div class="container">
 			<div class="row">
-				<img class="home-illu" src="images/rivus_summary_transparent.png" alt="Rivus-Summary">
+				<img class="home-illu" src="images/rivus-summary.png" alt="Rivus-Summary">
 			</div>
 		</div>
 	</div>
