--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 	<div class="jumbotron-contact text-center">
 		<div class="container">
 			<div class="row">
-				<img class="home-illu" src="images/huntsville.png" alt="Huntsville">
+				<img class="home-illu" src="images/madisonWI.png" alt="MadisonWI">
 			</div>
 		</div>
 	</div>
