--- a/contact.html
+++ b/contact.html
@@ -29,16 +29,19 @@
 	</header>
 
 	<div class="jumbotron-contact text-center">
-		<div class="container">
-			<div class="row">
-				<img class="home-illu" src="images/madisonWI.png" alt="MadisonWI">
-			</div>
+		<div class="row">
+			<img class="home-illu" src="images/madisonWI.png" alt="MadisonWI">
 		</div>
 	</div>
 
 	<section class="page-section page-section-spacious contact-shade bottom-pad">
 		<div class="container-narrow">		
 			<div class="row mt-4">
+				<div class="col-xs-12 col-sm-3">
+					<a href="https://www.linkedin.com/in/kay-sun-22164411" target="_blank">
+						<img class="home-illu imgcenter" src="images/LinkedIn-48.png" align="right" alt="kaysun-linkedin">
+					</a>
+				</div>	
 				<div class="col-xs-12 col-sm-9">				
 					<p class="labelthin-bold text-left no-bottom-pad mb-0">
 						Email
@@ -46,13 +49,7 @@
 					<p class="labelthin text-left">
 						kaysunphd [at] gmail [dot] com
 					</p>
-				</div>
-				<div class="col-xs-12 col-sm-9">
-					<a href="https://www.linkedin.com/in/kay-sun-22164411" target="_blank">
-						<img class="home-illu imgcenter" src="images/LinkedIn-48.png" align="left" alt="kaysun-linkedin">
-					</a>
 				</div>	
-				
 			</div>
 		</div>
 
