--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
 					</a>
 				</div>
 			</div>
+			<div class="row text-center">
+				<div class="col-xs-12 col-sm-4 segment-shade">
+					<a class="no-underline-hover" href="segment.html">
+						<img class="home-illu" src="images/segment_link_transparent.png" alt="segment_link">
+					</a>
+				</div>
+				<div class="col-xs-12 col-sm-4 examgroup-shade">
+					<a class="no-underline-hover" href="examgroup.html">
+						<img class="home-illu" src="images/examgroup_link_transparent.png" alt="examgroup_link">
+					</a>
+				</div>
+			</div>
 			<div class="row text-center mb-6 sandbox-shade">
 				<a class="no-underline-hover" href="sandbox/sandbox.html" target="_blank">
 					<img class="home-illu mt-4 mb-4" src="images/sandbox2.png" alt="sandbox_link">
@@ -82,7 +94,7 @@
 					<img class="img-doing" src="images/terminal.png" alt="solve">
 					<p class="labelbold">SOLVE</p>
 					<p class="label mt-3">
-						We bring our extensive experience in medical modeling for disease & injury simulation, image-guided surgery, therapy evaluation, and medical device & protective equipment design to conceptualize the solution. 
+						We bring our extensive experience in medical modeling for disease & injury simulation, image-guided surgery, therapy evaluation, medical device & protective equipment design, and machine learning to conceptualize the solution. 
 					</p>
 				</div>
 			</div>
