--- a/segment.html
+++ b/segment.html
@@ -78,7 +78,7 @@
 					<h5 class="text-center yellow-text">Yellow indicate underpredictions</h5>
 				</div>
 				<div class="col-xs-12 col-sm-6">
-					<img class="home-illu" src="images/dice_score_liver_segment.PNG" alt="dice-score-liver-segment">
+					<img class="home-illu" src="images/dice_liver_segment.png" alt="dice-score-liver-segment">
 				</div>
 			</div>
 
