change header color add dose prediction

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="container-narrow">
 			<h1 class="text-center">What We Have Created</h1>
 			<p class="lead text-center">
-				Our portfolio of some recent works highlights our modeling, programming and design experiences where we build strategic solutions to diverse problems.
+				Our portfolio of some recent works highlights our deep learning, biophysics modeling, programming and design experiences where we build strategic solutions to diverse problems.
 			</p>
     		<div class="row text-center mt-6">
 				<div class="col-xs-12 col-sm-4 rivus-shade">
@@ -68,6 +68,11 @@
 				<div class="col-xs-12 col-sm-4 examgroup-shade">
 					<a class="no-underline-hover" href="examgroup.html">
 						<img class="home-illu" src="images/examgroup_link_transparent.png" alt="examgroup_link">
+					</a>
+				</div>
+				<div class="col-xs-12 col-sm-4 dose-shade">
+					<a class="no-underline-hover" href="dose.html">
+						<img class="home-illu" src="images/dose_link_transparent.png" alt="dose_link">
 					</a>
 				</div>
 			</div>
