--- a/rivus.html
+++ b/rivus.html
@@ -14,7 +14,7 @@
 	<title>rivus</title>
 </head>
 <body>
-	<header class="site-header">
+	<header class="site-header rivus-shade">
 		<div class="container">
 			<a class="no-underline-hover" href="index.html">
 				<img class="site-header-icon" src="images/logo_small.png" alt="Kay Sun logo">	
