--- a/segment.html
+++ b/segment.html
@@ -14,7 +14,7 @@
 	<title>segment</title>
 </head>
 <body>
-	<header class="site-header">
+	<header class="site-header segment-shade">
 		<div class="container">
 			<a class="no-underline-hover" href="index.html">
 				<img class="site-header-icon" src="images/logo_small.png" alt="Kay Sun logo">	
