--- a/index.html
+++ b/index.html
@@ -76,10 +76,17 @@
 					</a>
 				</div>
 			</div>
-			<div class="row text-center mb-6 sandbox-shade">
+			<div class="row text-center sandbox-shade">
 				<a class="no-underline-hover" href="sandbox/sandbox.html" target="_blank">
 					<img class="home-illu mt-4 mb-4" src="images/sandbox2.png" alt="sandbox_link">
 				</a>
+			</div>
+			<div class="row text-center">
+				<div class="col-xs-12 col-sm-4 deidentify-shade">
+					<a class="no-underline-hover" href="deidentify.html">
+						<img class="home-illu" src="images/deidentify_link_transparent.png" alt="deidentify_link">
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
