--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 	</header>
 
 	<div class="jumbotron-contact text-center">
-		<div class="row">
+		<div class="container">
 			<img class="home-illu" src="images/madisonWI.png" alt="MadisonWI">
 		</div>
 	</div>
