add nerve segmentation

--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
 					</a>
 				</div>
 			</div>
+			<div class="row text-center">
+				<div class="col-xs-12 col-sm-4 nerve-shade">
+					<a class="no-underline-hover" href="nerve.html">
+						<img class="home-illu" src="images/nerve_link_transparent.png" alt="nerve_link">
+					</a>
+				</div>
+				<div class="col-xs-12 col-sm-4 predictive-shade">
+					<a class="no-underline-hover" href="predictive.html">
+						<img class="home-illu" src="images/predictive_link_transparent.png" alt="predictive_link">
+					</a>
+				</div>
+			</div>
 			<div class="row text-center sandbox-shade">
 				<a class="no-underline-hover" href="sandbox/sandbox.html" target="_blank">
 					<img class="home-illu mt-4 mb-4" src="images/sandbox2.png" alt="sandbox_link">
@@ -134,7 +146,7 @@
 		<div class="container-narrow">
 			<h1 class="text-center">Who We Are</h1>
 			<div class="text-center mt-5">
-				<a href="https://www.linkedin.com/in/kay-sun-22164411" target="_blank">
+				<a href="https://www.linkedin.com/in/kaysunphd" target="_blank">
 					<img src="images/me.png" width="20%" height="20%" alt="Kay Sun, Ph.D.">
 				<!--<a class="hero-link" href="/" target="_blank">
 					<span class="octicon octicon-eye">
