--- a/segment.html
+++ b/segment.html
@@ -56,7 +56,7 @@
 
 			<div class="row">
 				<p class="lead">
-					A 3D U-Net based deep learning model was developed using supervised machine learning and trained with segmented liver organs from CTs from the <a href="https://competitions.codalab.org/competitions/1709"> Liver Tumor Segmentation Challenge (LiTS) </a>.
+					A 3D U-Net based deep learning model was developed and trained with segmented liver organs from CTs from the <a href="https://competitions.codalab.org/competitions/1709"> Liver Tumor Segmentation Challenge (LiTS) </a>.
 					A different and unseen dataset from <a href="https://www.ircad.fr/research/3dircadb/"> 3Dircadb </a> was used for independent validation. High dice and Hausdorff 95 scores were observed for the predicted liver segmentations.
 				</p>
 				<br>
