change jumbotron color

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 	</header>
 
-	<div class="jumbotron text-center">
+	<div class="jumbotron jumbotron-shade text-center">
 		<div class="container">
 				<img class="home-illu" src="images/personalized_small.png" alt="personalized">
 			<p class="jumbotron-lead">We build cross-platform medical applications<br>
