update apps to solutions. add predictive.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<img class="site-header-icon" src="images/logo_small.png" alt="Kay Sun logo">	
 			</a>
 			<nav class="site-header-nav">
-				<a class="site-header-nav-item" href="#what-we-created">Apps</a>
+				<a class="site-header-nav-item" href="#what-we-created">Solutions</a>
 				<a class="site-header-nav-item" href="news.html">News</a>
 				<a class="site-header-nav-item" href="contact.html">Contact</a>
 			</nav>
@@ -30,8 +30,8 @@
 	<div class="jumbotron jumbotron-shade text-center">
 		<div class="container">
 				<img class="home-illu" src="images/personalized_small.png" alt="personalized">
-			<p class="jumbotron-lead">We build cross-platform medical applications<br>
-				<!--<span class="jumbotron-lead-muted"> for medical applications</span>-->
+			<p class="jumbotron-lead">We build cross-platform medical solutions<br>
+				<!--<span class="jumbotron-lead-muted"> for medical solutions</span>-->
 			</p>
 		</div>
 	</div>
@@ -198,7 +198,7 @@
 				<img class="site-header-icon" src="images/logo_smaller.png" alt="Kay Sun logo">	
 			</a>
 			<nav class="footer-nav">
-				<a class="footer-nav-item" href="#what-we-created">Apps</a>
+				<a class="footer-nav-item" href="#what-we-created">Solutions</a>
 				<a class="footer-nav-item" href="news.html">News</a>
 				<a class="footer-nav-item" href="contact.html">Contact</a>
 			</nav>
