--- a/rivus.html
+++ b/rivus.html
@@ -20,7 +20,7 @@
 				<img class="site-header-icon" src="images/logo_small.png" alt="Kay Sun logo">	
 			</a>
 			<nav class="site-header-nav">
-				<a class="site-header-nav-item" href="index.html#what-we-created">Apps</a>
+				<a class="site-header-nav-item" href="index.html#what-we-created">Solutions</a>
 				<a class="site-header-nav-item" href="news.html">News</a>
 				<a class="site-header-nav-item" href="contact.html">Contact</a>
 			</nav>
@@ -115,7 +115,7 @@
 				<img class="site-header-icon" src="images/logo_smaller.png" alt="Kay Sun logo">	
 			</a>
 			<nav class="footer-nav">
-				<a class="footer-nav-item" href="index.html#what-we-created">Apps</a>
+				<a class="footer-nav-item" href="index.html#what-we-created">Solutions</a>
 				<a class="footer-nav-item" href="news.html">News</a>
 				<a class="footer-nav-item" href="contact.html">Contact</a>
 			</nav>
