--- a/examgroup.html
+++ b/examgroup.html
@@ -55,7 +55,7 @@
 					</p>
 					<br>	
 
-					<img class="home-illu" src="images/simpleclassify.png" alt="CNN-classify">
+					<img class="home-illu" src="images/CNN.png" alt="CNN-classify">
 					<p class="labelthin"> Convolutional neural network for exam group classification of MR images </p>	
 				</div>
 			</div>
