--- a/predictive.html
+++ b/predictive.html
@@ -66,6 +66,15 @@
 					This model can be used to fine tune the radiation therapy plan as an addition objective in the planning calculus to reduce risk of toxicity prior to treatment and also to preemptively prescribe medication to counter toxicity to try to offset symptoms after treatment.
 				</p>
 				<br>
+
+				<p class="lead labelbold text-center">
+					Machine Learning Training and Hyperparameter Tuning
+				</p>
+				<br>
+				<div class="row more-bottom-pad">
+					<img class="home-illu" src="images/model-training.png" alt="ML-train">
+				</div>
+
 				<p class="lead">
 					For another application, the success rate for long-term pain relief can be predicted immediately after neuroablation treatment for pain management. 
 					Typically, success of neuroablation treatment is based on long-term pain relief measured by patient reported outcomes after a long monitoring period lasting months to years. 
