--- a/segment.html
+++ b/segment.html
@@ -64,19 +64,28 @@
 
 			<div class="row">
 				<p class="lead labelbold text-center">
+					3D U-Net Architecture
+				</p>
+				<div class="row more-bottom-pad">
+					<img class="home-illu" src="images/3D-Unet.png" alt="3D-Unet">
+				</div>
+			</div>
+			
+
+			<div class="row">
+				<p class="lead labelbold text-center">
 					Segmented liver organ from abdominal CT scan predicted using deep learning
 				</p>
 				<br>
-			</div>
-
-			<div class="row">
-				<div class="col-xs-12 col-sm-6">
-					<img class="home-illu" src="images/liver_segment.gif" alt="liver-segment">
-					<h5 class="text-center blue-text">Blue indicate overpredictions</h5>
-					<h5 class="text-center yellow-text">Yellow indicate underpredictions</h5>
-				</div>
-				<div class="col-xs-12 col-sm-6">
-					<img class="home-illu" src="images/dice_liver_segment.png" alt="dice-score-liver-segment">
+				<div class="row">
+					<div class="col-xs-12 col-sm-6">
+						<img class="home-illu" src="images/liver_segment.gif" alt="liver-segment">
+						<h5 class="text-center blue-text">Blue indicate overpredictions</h5>
+						<h5 class="text-center yellow-text">Yellow indicate underpredictions</h5>
+					</div>
+					<div class="col-xs-12 col-sm-6">
+						<img class="home-illu" src="images/dice_liver_segment.png" alt="dice-score-liver-segment">
+					</div>
 				</div>
 			</div>
 
