fix image padding

--- a/predictive.html
+++ b/predictive.html
@@ -71,8 +71,8 @@
 					Machine Learning Training and Hyperparameter Tuning
 				</p>
 				<br>
-				<div class="row more-bottom-pad">
-					<img class="home-illu" src="images/model-training.png" alt="ML-train">
+				<div class="row">
+					<img class="home-illu more-bottom-pad" src="images/model-training.png" alt="ML-train">
 				</div>
 
 				<p class="lead">
