--- a/segment.html
+++ b/segment.html
@@ -66,8 +66,8 @@
 				<p class="lead labelbold text-center">
 					3D U-Net Architecture
 				</p>
-				<div class="row more-bottom-pad">
-					<img class="home-illu" src="images/3D-Unet.png" alt="3D-Unet">
+				<div class="row">
+					<img class="home-illu more-bottom-pad" src="images/3D-Unet.png" alt="3D-Unet">
 				</div>
 			</div>
 			
