--- a/dose.html
+++ b/dose.html
@@ -56,7 +56,7 @@
 
 			<div class="row">
 				<p class="lead">
-					A modified 3D U-Net based deep learning model was developed and trained with segmented head CTs from the <a href="https://competitions.codalab.org/competitions/23428"> OpenKBP - 2020 AAPM Grand Challenge </a>. Relatively low errors in the predicted 3D radiation dose distributions were observed.
+					A modified 3D U-Net based deep learning model was developed and trained with segmented head CTs from the <a href="https://competitions.codalab.org/competitions/23428" target="_blank"> OpenKBP - 2020 AAPM Grand Challenge </a>. Relatively low errors in the predicted 3D radiation dose distributions were observed.
 				</p>
 				<br>
 			</div>
