--- a/nerve.html
+++ b/nerve.html
@@ -59,7 +59,7 @@
 				</div>
 				<div class="col-xs-12 col-sm-9">
 					<p class="lead">
-						A modified and highly tuned 3D U-Net based deep learning model was trained with ultrasound images from <a href="https://www.kaggle.com/c/ultrasound-nerve-segmentation/overview"> Kaggle's Ultrasound Nerve Segment Competition</a>.
+						A modified and highly tuned 3D U-Net based deep learning model was trained with ultrasound images from <a href="https://www.kaggle.com/c/ultrasound-nerve-segmentation/overview" target="_blank"> Kaggle's Ultrasound Nerve Segment Competition</a>.
 						Dice coefficient of 0.69 between the predicted and truth segmentations (provided from Kaggle competition) were observed. 
 						The top 5 scores from the competition were in the 0.72 to 0.73 range as these models employed multiple deep learning models in ensemble to achieve the higher Dice scores but will require longer inference time.
 					</p>
