--- a/predictive.html
+++ b/predictive.html
@@ -72,7 +72,7 @@
 				<p class="lead">
 					For one application, the risk of patient experienced toxicity after radiation therapy (RT) to treat cancer can be predicted from the delivered radiation dose to the surrounding organs of the tumor. 
 					The 3D dose distribution to each organ is represented by the dose-volume histogram (DVH) calculated from DICOM RT Dose and RT Structure acquired during therapy. 
-					An open source machine learning library <a href="https://scikit-learn.org/stable/"> scikit-learn</a> was used to train the DVH RT data on a SVM model with recursive feature elimination and cross validation to produce a model of accuracy 79% to predict generic toxicity. 
+					An open source machine learning library <a href="https://scikit-learn.org/stable/" target="_blank"> scikit-learn</a> was used to train the DVH RT data on a SVM model with recursive feature elimination and cross validation to produce a model of accuracy 79% to predict generic toxicity. 
 					This model can be used to fine tune the radiation therapy plan as an addition objective in the planning calculus to reduce risk of toxicity prior to treatment and also to preemptively prescribe medication to counter toxicity to try to offset symptoms after treatment.
 				</p>
 				<br>
@@ -81,7 +81,7 @@
 					For another application, the success rate for long-term pain relief can be predicted immediately after neuroablation treatment for pain management. 
 					Typically, success of neuroablation treatment is based on long-term pain relief measured by patient reported outcomes after a long monitoring period lasting months to years. 
 					Treatment success for long-term pain relief right after neuroablation can be predicted from a weighted ensemble model of random forests, boosted trees, K-nearest neighbors and neural networks. 
-					The open source AutoML library, <a href="https://auto.gluon.ai/"> AutoGluon</a>, was used to train this ensemble model with recursive feature elimination and cross validations to predict treatment success for long term pain relief. 
+					The open source AutoML library, <a href="https://auto.gluon.ai/" target="_blank"> AutoGluon</a>, was used to train this ensemble model with recursive feature elimination and cross validations to predict treatment success for long term pain relief. 
 					Based on predictions, clinicians can decide right after procedure whether treatment performed is a success or additional treatment is required without waiting for months for patient response.
 				</p>
 				<br>
