--- a/segment.html
+++ b/segment.html
@@ -56,8 +56,8 @@
 
 			<div class="row">
 				<p class="lead">
-					A 3D U-Net based deep learning model was developed and trained with segmented liver organs from CTs from the <a href="https://competitions.codalab.org/competitions/1709"> Liver Tumor Segmentation Challenge (LiTS) </a>.
-					A different and unseen dataset from <a href="https://www.ircad.fr/research/3dircadb/"> 3Dircadb </a> was used for independent validation. High dice and Hausdorff 95 scores were observed for the predicted liver segmentations.
+					A 3D U-Net based deep learning model was developed and trained with segmented liver organs from CTs from the <a href="https://competitions.codalab.org/competitions/17094" target="_blank"> Liver Tumor Segmentation Challenge (LiTS) </a>.
+					A different and unseen dataset from <a href="https://www.ircad.fr/research/data-sets/liver-segmentation-3d-ircadb-01/" target="_blank"> 3Dircadb </a> was used for independent validation. High dice and Hausdorff 95 scores were observed for the predicted liver segmentations.
 				</p>
 				<br>
 			</div>
