--- a/deidentify.html
+++ b/deidentify.html
@@ -44,7 +44,7 @@
 					</p>
 					<br>
 					<p class="lead">
-						Learn more about GDPR and HIPAA <a href="https://www.fairwarning.com/insights/health-it-director/gdpr-and-hipaa-compliance-what-are-the-differences-and-how-can-i-work-towards-compliance" target=_blank>here </a>
+						Learn more about GDPR and HIPAA <a href="https://tugboatlogic.com/blog/hipaa-vs-gdpr-compliance-whats-the-difference/" target=_blank>here </a>
 					</p>
 					<br>
 					<p class="lead">
